name:                site
version:             0.1.0.0
synopsis:            LibreCash's Website
description:         Please see README.md
homepage:            http://github.com/grauwoelfchen/librecash-site
license:             BSD3
license-file:        LICENSE
author:              Yasuhiro Asaka <grauwoelfchen@gmail.com>
maintainer:          Yasuhiro Asaka <grauwoelfchen@gmail.com>
copyright:           2016 Yasuhiro Asaka
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable librecash-site
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , text >= 0.11 && < 2.0
                     , blaze-html
                     , bytestring >= 0.9 && < 0.11
                     , template-haskell
                     , shakespeare >= 2.0 && < 2.1
                     , warp
                     , wai
                     , wai-logger
                     , wai-middleware-static
                     , wai-extra >= 3.0 && < 3.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
